Adapted the home page both visually and contentwise to be more suiting to Aalsaunet Consulting's brand

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Aalsaunet Consulting Site",
+  "name": "Aalsaunet Consulting Site",
   "icons": [
     {
       "src": "favicon.ico",
